--- a/app/src/main/res/layout/fragment_map_.xml
+++ b/app/src/main/res/layout/fragment_map_.xml
@@ -5,10 +5,10 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical" >
-    <fragment
+    <com.mapbox.mapboxsdk.maps.MapView
         android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+
         />
 </LinearLayout>
