--- a/app/src/main/res/layout/popupadd.xml
+++ b/app/src/main/res/layout/popupadd.xml
@@ -5,12 +5,6 @@
     android:orientation="vertical"
     android:layout_gravity="center">
 
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_margin="10dp">
         <TextView
             android:id="@+id/textView"
             android:layout_width="match_parent"
@@ -19,32 +13,67 @@
             android:text="INSERT YOUR WIFI'S INFORMATIONS"
             android:layout_marginBottom="10dp"/>
 
-        <EditText
-            android:id="@+id/pw_loc_add"
-            android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:orientation="horizontal"
+        android:layout_margin="10dp">
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:gravity="center_horizontal"
-            android:layout_marginBottom="5dp"/>
+            android:orientation="vertical"
+            android:layout_margin="10dp">
+
+            <ImageView
+                android:layout_width="64dip"
+                android:layout_height="64dip"
+                android:src="@drawable/photos"
+                android:id="@+id/pic_locc"/>
 
 
-
-        <EditText
-            android:id="@+id/desc_loc_add"
+        </LinearLayout>
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:gravity="center_horizontal"
-            android:layout_marginBottom="5dp"/>
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_margin="10dp">
 
-        <Button
-            android:id="@+id/add_loc"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="ADD"
-            android:layout_marginBottom="5dp"/>
+            <EditText
+                android:id="@+id/desc_loc_add"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:ems="10"
+                android:gravity="center_horizontal"
+                android:layout_marginBottom="5dp"
+                android:hint="wifi name"/>
+
+            <EditText
+                android:id="@+id/pw_loc_add"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:ems="10"
+                android:gravity="center_horizontal"
+                android:layout_marginBottom="5dp"
+                android:hint="wifi password"/>
+
+
+
+
+        </LinearLayout>
+
 
     </LinearLayout>
+
+    <Button
+        android:id="@+id/add_loc"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="ADD"
+        android:layout_marginBottom="5dp"/>
+
+
+
+
 
 
 </LinearLayout>
