--- a/app/src/main/res/layout/custom_infowindow.xml
+++ b/app/src/main/res/layout/custom_infowindow.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    android:id="@+id/popupid"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,7 +11,10 @@
     android:paddingTop="5dip"
     android:paddingLeft="10dip"
     android:paddingRight="20dip"
-    android:paddingBottom="25dip">
+    android:paddingBottom="25dip"
+    android:clickable="true"
+    android:focusable="true"
+    android:focusableInTouchMode="true">
 
     <ImageView
         android:id="@+id/clientPic"
