--- a/app/src/main/res/layout/fragment_detail_loc.xml
+++ b/app/src/main/res/layout/fragment_detail_loc.xml
@@ -53,4 +53,12 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         app:srcCompat="@android:drawable/ic_menu_add" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/cnctwifi"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|start"
+        android:layout_margin="@dimen/fab_margin"
+        app:srcCompat="@android:drawable/arrow_down_float" />
 </FrameLayout>
