--- a/app/src/main/res/layout/custom_infowindow.xml
+++ b/app/src/main/res/layout/custom_infowindow.xml
@@ -10,7 +10,7 @@
     android:background="#FFFFFF"
     android:paddingTop="5dip"
     android:paddingLeft="10dip"
-    android:paddingRight="20dip"
+    android:paddingRight="10dip"
     android:paddingBottom="25dip"
     android:clickable="true"
     android:focusable="true"
@@ -33,27 +33,33 @@
         android:layout_gravity="center_vertical">
 
 
+        <TextView
+            android:id="@+id/titleWifi"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:gravity="center_vertical"
+            android:text="Amixx XX Soluxxxxx"
+            android:textColor="#000000"
+            android:textSize="15dip" />
 
-            <TextView
-                android:id="@+id/titleWifi"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Amixx XX Soluxxxxx"
-                android:textSize="10dip"
-                android:gravity="center_vertical"
-                android:layout_margin="5dp"
-                android:textColor="#000000"/>
 
+        <TextView
+            android:id="@+id/passworWifi"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:gravity="center_vertical"
+            android:text="+91-98XXXXX200"
+            android:textColor="#000000"
+            android:textSize="15dip" />
 
-            <TextView
-                android:id="@+id/passworWifi"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="+91-98XXXXX200"
-                android:textSize="10dip"
-                android:gravity="center_vertical"
-                android:layout_margin="5dp"
-                android:textColor="#000000"/>
+        <Button
+            android:id="@+id/toconnect"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Connect" />
 
         <ImageView
             android:id="@+id/addfavourite"
