--- a/app/src/main/res/layout/simple_list_item_1.xml
+++ b/app/src/main/res/layout/simple_list_item_1.xml
@@ -42,7 +42,10 @@
             android:layout_weight="1"
             android:text="Nom"
             android:textColor="#686868"
-            android:textSize="24sp" />
+            android:textSize="24sp"
+            android:layout_marginBottom="30dp"/>
+
+
     </LinearLayout>
 
 
