--- a/app/src/main/res/layout/fragment_favouritemap.xml
+++ b/app/src/main/res/layout/fragment_favouritemap.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     tools:context="com.ahmedghassen.socialwifi.FavouriteMapFragment">
 
-    <com.mapbox.mapboxsdk.maps.MapView
+    <com.google.android.gms.maps.MapView
         android:id="@+id/mapfav"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
