--- a/app/src/main/res/layout/fragment_detail_loc.xml
+++ b/app/src/main/res/layout/fragment_detail_loc.xml
@@ -36,7 +36,7 @@
 
             android:layout_marginBottom="5dp"/>
 
-        <com.mapbox.mapboxsdk.maps.MapView
+        <com.google.android.gms.maps.MapView
             android:id="@+id/detmaplayout"
             android:layout_width="match_parent"
             android:layout_height="250dp"
