--- a/app/src/main/res/layout/fragment_map_.xml
+++ b/app/src/main/res/layout/fragment_map_.xml
@@ -10,14 +10,15 @@
         android:id="@+id/fabadd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
+        android:layout_gravity="bottom|center"
         android:layout_margin="@dimen/fab_margin"
         app:srcCompat="@android:drawable/ic_input_add" />
-    <com.mapbox.mapboxsdk.maps.MapView
+
+    <com.google.android.gms.maps.MapView
         android:id="@+id/map"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+       />
 
-        />
 
 </android.support.v7.widget.ContentFrameLayout>
