--- a/app/src/main/res/layout/custom_infowindow.xml
+++ b/app/src/main/res/layout/custom_infowindow.xml
@@ -1,36 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:id="@+id/popupid"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/popupid"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
-    android:background="#FFFFFF"
-    android:paddingTop="5dip"
-    android:paddingLeft="10dip"
-    android:paddingRight="10dip"
-    android:paddingBottom="25dip"
+    android:background="@drawable/custom_info_bubble"
     android:clickable="true"
     android:focusable="true"
-    android:focusableInTouchMode="true">
+    android:focusableInTouchMode="true"
+    android:orientation="horizontal"
+    android:paddingBottom="25dip"
+    android:paddingLeft="10dip"
+    android:paddingRight="10dip"
+    android:paddingTop="5dip"
+    android:gravity="center">
 
     <ImageView
         android:id="@+id/clientPic"
         android:layout_width="60dip"
         android:layout_height="60dip"
-        android:src="@drawable/ic_power_settings_new_black_24dp"
+        android:layout_gravity="center_vertical"
         android:layout_marginLeft="8dip"
-        android:layout_gravity="center_vertical"/>
+        android:src="@drawable/ic_power_settings_new_black_24dp" />
 
     <LinearLayout
         android:id="@+id/layoutpopup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:layout_gravity="center_vertical"
         android:layout_marginLeft="2dip"
-        android:layout_gravity="center_vertical">
+        android:orientation="vertical">
 
 
         <TextView
@@ -41,7 +41,7 @@
             android:gravity="center_vertical"
             android:text="Amixx XX Soluxxxxx"
             android:textColor="#000000"
-            android:textSize="15dip" />
+            android:textSize="20dp" />
 
 
         <TextView
@@ -52,13 +52,15 @@
             android:gravity="center_vertical"
             android:text="+91-98XXXXX200"
             android:textColor="#000000"
-            android:textSize="15dip" />
+            android:textSize="20dp" />
 
         <Button
             android:id="@+id/toconnect"
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="#FFC300"
+            android:background="@drawable/com_facebook_tooltip_black_background"
             android:text="Connect" />
 
         <ImageView
