--- a/app/src/main/res/layout/fragment_detail_loc.xml
+++ b/app/src/main/res/layout/fragment_detail_loc.xml
@@ -26,7 +26,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:layout_gravity="center"
+            android:gravity="center"
             android:textSize="20dp"
             android:layout_marginBottom="5dp"/>
 
@@ -35,7 +35,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:layout_gravity="center"
+            android:gravity="center"
             android:textSize="20dp"
             android:layout_marginBottom="5dp"/>
 
