--- a/app/src/main/res/layout/fragment_detail_loc.xml
+++ b/app/src/main/res/layout/fragment_detail_loc.xml
@@ -17,7 +17,7 @@
             android:id="@+id/detlocimg"
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:src="@drawable/photos"
+            android:src="@drawable/direct_wifi_logo"
             android:layout_marginBottom="10dp"
             />
 
@@ -65,4 +65,19 @@
         android:layout_gravity="bottom|start"
         android:layout_margin="@dimen/fab_margin"
         app:srcCompat="@drawable/wifi_coonect" />
+    <com.facebook.share.widget.ShareButton
+        android:id="@+id/share"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center"
+        android:layout_marginBottom="@dimen/fab_margin"
+        />
+
+   <!-- <android.support.design.widget.FloatingActionButton
+        android:id="@+id/share"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center"
+        android:layout_marginBottom="@dimen/fab_margin"
+        app:srcCompat="@drawable/share"/>-->
 </FrameLayout>
