--- a/app/src/main/res/layout/fragment_add_loc.xml
+++ b/app/src/main/res/layout/fragment_add_loc.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.ahmedghassen.socialwifi.AddLocFragment">
+    tools:context="com.esprit.socialwifi.AddLocFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <LinearLayout
