--- a/app/src/main/res/layout/fragment_favouritemap.xml
+++ b/app/src/main/res/layout/fragment_favouritemap.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.ahmedghassen.socialwifi.FavouriteMapFragment">
+    tools:context="com.esprit.socialwifi.FavouriteMapFragment">
 
     <com.google.android.gms.maps.MapView
         android:id="@+id/mapfav"
