--- a/app/src/main/res/layout/dialog_add_loc.xml
+++ b/app/src/main/res/layout/dialog_add_loc.xml
@@ -12,8 +12,8 @@
 
         <ImageView
             android:id="@+id/addlocimage_d"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:layout_gravity="center"
             android:src="@drawable/gallery"
             android:layout_marginTop="10dp"
