--- a/app/src/main/res/layout/listview_item2.xml
+++ b/app/src/main/res/layout/listview_item2.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<com.daimajia.swipe.SwipeLayout
-    xmlns:swipe="http://schemas.android.com/apk/res-auto"
+<com.daimajia.swipe.SwipeLayout xmlns:swipe="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/swipe2"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
