--- a/app/src/main/res/layout/listview_item.xml
+++ b/app/src/main/res/layout/listview_item.xml
@@ -65,8 +65,8 @@
 
         <ImageView
             android:id="@+id/favimg_s"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             android:layout_marginBottom="4dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="4dp"
